--- a/.github/workflow/merge_branch.yml
+++ b/.github/workflow/merge_branch.yml
@@ -1,5 +1,5 @@
 name: 'Merge Learning'
-
+run-name: Merge Learning...
 on: 
 	pull_reques:
 		branches:
@@ -8,14 +8,8 @@ on:
 			- closed
 
 jobs:
-	merge_learn_start:
-		if: github.event.pull_request.merged == true
+	merge-learn-start:
 		runs-on: ubuntu-latest
-			- uses: actions/checkout@v4
-				with:
-					token: ${{ secrets.GITHUB_TOKEN }}
-          scripts:
-            console.dir(github)
 		- uses: actions/github-script@v6
 			run: gh pr checkout develop
 			run: gh pr merge target_branch
