--- a/.github/workflow/merge_branch.yml
+++ b/.github/workflow/merge_branch.yml
@@ -10,11 +10,11 @@ jobs:
 	merge_learn_start:
 		if: github.event.pull_request.merged == true
 		runs-on: ubuntu-latest
+		steps:
 			- uses: actions/checkout@v4
-				with:
-					token: ${{ secrets.GITHUB_TOKEN }}
+					with:
+						token: ${{ secrets.GITHUB_TOKEN }}
           scripts:
             console.dir(github)
-		- uses: actions/github-script@v6
-			run: gh pr checkout develop
-			run: gh pr merge target_branch
+				run: git checkout develop
+				run: git merge target_branch
