--- a/.github/workflows/merge_branch.yml
+++ b/.github/workflows/merge_branch.yml
@@ -10,7 +10,7 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@4
+      - uses: actions/checkout@v4
 
       - name: Merge client_build -> amplify (staging)
         uses: devmasx/merge-branch@master
