--- a/.github/workflows/merge_branch.yml
+++ b/.github/workflows/merge_branch.yml
@@ -12,10 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Merge client_build -> amplify (staging)
-        uses: devmasx/merge-branch@master
+      - name: Branch Merge
+        uses: everlytic/branch-merge@1.1.5
         with:
-          type: now
-          from_branch: target_branch
-          target_branch: develop
+          target_branch: 'develop'
+          source_ref: ${{ github.ref }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          commit_message_template: '[Automated] Merged {source_ref} into target {target_branch}'
