--- a/.github/workflows/merge_test_02.yml
+++ b/.github/workflows/merge_test_02.yml
@@ -1,4 +1,4 @@
-name: 'Merge Learning'
+name: "Merge Amplify Branch"
 on:
   pull_request:
     branches:
@@ -7,15 +7,16 @@ on:
       - closed
 permissions: write-all
 jobs:
-  merge_learn_start:
+  merge_branch:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Branch Merge
+      - if: contains(github.event.pull_request.labels.*.name, 'develop')
+        name: Branch Merge Main
         uses: everlytic/branch-merge@1.1.5
         with:
           github_token: ${{secrets.GITHUB_TOKEN}}
           source_ref: ${{github.ref}}
           target_branch: develop
-          commit_message_template: '[Automated] Merged develop | ${{github.event.pull_request.title}} - worker: ${{github.actor}}'
+          commit_message_template: '[Automated] Merged staging/main | ${{github.event.pull_request.title}}'
